fix byte compile error for variable in macro template
orgstrap-orgstrap-block-name is needed during macro expansion of
orgstrap--lv-common-with-block-name so that we can reuse code
in a template and in the core implementation, as a result we have
to use cl-eval-when in order to ensure that the block name is
available at all times

--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 721350f98c87e3f101925d348e7d44062517d21725c8f252b1ae5569935b10ca; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: bd24b957d2da67208432b883ecfb4eb1c7930ad295fdca3be0da168c956a20e3; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Bootstrap an Org file using file local variables
 #+options: num:nil \n:nil
@@ -583,7 +583,7 @@ Here is the prop line from the first line of this file that
 includes the cypher and checksum of the =orgstrap= block.
 #+name: local-variables-prop-line-example
 #+begin_src org :eval never
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: 721350f98c87e3f101925d348e7d44062517d21725c8f252b1ae5569935b10ca; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-block-checksum: bd24b957d2da67208432b883ecfb4eb1c7930ad295fdca3be0da168c956a20e3; orgstrap-norm-func-name: orgstrap-norm-func--prp-1\.0; -*-
 #+end_src
 
 # BE VERY CAREFUL WITH MANUAL EDITS
@@ -685,10 +685,12 @@ of any changes.
 (defvar orgstrap-mode nil
   "Variable to track whether `orgstrap-mode' is enabled.")
 
-(defvar orgstrap-orgstrap-block-name "orgstrap"
-  "Set the default blockname to orgstrap by convention.
+(cl-eval-when (eval compile load)
+  ;; prevent warnings since this is used as a variable in a macro
+  (defvar orgstrap-orgstrap-block-name "orgstrap"
+    "Set the default blockname to orgstrap by convention.
 This makes it easier to search for orgstrap if someone encounters
-an orgstrapped file and wants to know what is going on.")
+an orgstrapped file and wants to know what is going on."))
 
 (defvar orgstrap-default-cypher 'sha256
   "The default cypher passed to `secure-hash' when hashing blocks.")
@@ -1160,7 +1162,7 @@ buffer or global setting for `orgstrap-norm-func'.
 
 When run this function replaces any existing orgstrap eval local variable with
 the latest implementation available according to the preferences for the current
-buffer and configuration. Other eval local variables are retained if they are
+buffer and configuration.  Other eval local variables are retained if they are
 present, and the orgstrap eval local variable is always added first."
   ;; switching comments probably wont work ? we can try
   ;; Use a prefix argument (i.e. C-u) to add file local variables comments instead of in a :noexport:
