--- a/README.org
+++ b/README.org
@@ -1508,6 +1508,9 @@ done
 :PROPERTIES:
 :CUSTOM_ID: change-log
 :END:
+** 1.1.1
+- Fix =orgstrap--hack-lv= to remove itself from the local
+  =hack-local-variables-hook=.
 ** 1.1
 :PROPERTIES:
 :CUSTOM_ID: 11
